--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.44.5",
+    "jose": "^6.1.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
