--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev --turbopack",
     "build": "drizzle-kit migrate && next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "postinstall": "npm install @vercel/blob"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
+    "@vercel/blob": "^2.0.0",
     "bcrypt": "^6.0.0",
     "drizzle-orm": "^0.44.5",
     "jose": "^6.1.0",
