--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "postinstall": "npm install @vercel/blob",
-    "vercel-build": "drizzle-kit migrate && next build"
+    "vercel-build": "echo DATABASE_URL=\"$DATABASE_URL\" > .env && drizzle-kit migrate && next build"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
