--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push --force",
     "postinstall": "npm install @vercel/blob"
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.2",
     "@vercel/blob": "^2.0.0",
     "bcrypt": "^6.0.0",
-    "drizzle-orm": "^0.44.5",
+    "dotenv": "^17.2.3",
     "drizzle-kit": "^0.31.5",
+    "drizzle-orm": "^0.44.5",
     "jose": "^6.1.0",
     "next": "15.5.4",
     "react": "19.1.1",
