--- a/package.json
+++ b/package.json
@@ -34,5 +34,14 @@
     "eslint-config-next": "^16.0.7",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "optionalDependencies": {
+    "lightningcss-darwin-arm64": "^1.31.1",
+    "lightningcss-darwin-x64": "^1.31.1",
+    "lightningcss-linux-arm64-gnu": "^1.31.1",
+    "lightningcss-linux-arm64-musl": "^1.31.1",
+    "lightningcss-linux-x64-gnu": "^1.31.1",
+    "lightningcss-linux-x64-musl": "^1.31.1",
+    "lightningcss-win32-x64-msvc": "^1.31.1"
   }
 }
