--- a/package.json
+++ b/package.json
@@ -42,6 +42,13 @@
     "lightningcss-linux-arm64-musl": "^1.31.1",
     "lightningcss-linux-x64-gnu": "^1.31.1",
     "lightningcss-linux-x64-musl": "^1.31.1",
-    "lightningcss-win32-x64-msvc": "^1.31.1"
+    "lightningcss-win32-x64-msvc": "^1.31.1",
+    "@tailwindcss/oxide-darwin-arm64": "^4.1.8",
+    "@tailwindcss/oxide-darwin-x64": "^4.1.8",
+    "@tailwindcss/oxide-linux-arm64-gnu": "^4.1.8",
+    "@tailwindcss/oxide-linux-arm64-musl": "^4.1.8",
+    "@tailwindcss/oxide-linux-x64-gnu": "^4.1.8",
+    "@tailwindcss/oxide-linux-x64-musl": "^4.1.8",
+    "@tailwindcss/oxide-win32-x64-msvc": "^4.1.8"
   }
 }
